# datasoftware

./: .gitignore  CMakeLists.txt  README.md  实验报告.md  实验步骤.md  小组提交文档-实验报告模板.docx  小组提交文档-实验报告模板_1.docx
gui_python/: main.py  requirements.txt
gui_python/gui/: __init__.py  main_window.py  styles.py  widgets.py  workers.py
gui_python/resources/: styles.qss
include/datasoftware/: ArchiveReader.h  ArchiveWriter.h  BackupEngine.h  BackupFilter.h  Compressor.h  Crypto.h  FileEntry.h  FileTraverser.h
src/: ArchiveReader.cpp  ArchiveWriter.cpp  BackupEngine.cpp  BackupFilter.cpp  Compressor.cpp  Crypto.cpp  FileEntry.cpp  FileTraverser.cpp  main.cpp  main_gui.cpp
src/gui/: MainWindow.cpp  MainWindow.h
test/: BackupEngineTest.cpp
